improve layout on mobile devices (fix #4)

--- a/src/views/App/index.css
+++ b/src/views/App/index.css
@@ -6,9 +6,10 @@ body {
   padding-right: 1.5rem;
 }
 
-#root {
+#root #container {
   width: calc(100vw - 2rem);
   height: calc(100vh - 2rem);
+  height: calc(calc(var(--vh, 1vh) * 100) - 2rem);
   display: flex;
   flex-direction: row;
 }
